plugins {
    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
    id 'com.google.protobuf' version '0.8.8'
}

group 'org.example'
version '1.0-SNAPSHOT'


mainClassName = 'MyApp'
applicationName = 'CatGame'
targetCompatibility = 11

def javafxModules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.media' ]
run {
    doFirst {
        jvmArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', javafxModules.join(',')
        ]
    }
}

repositories {
    mavenCentral()
    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
    jcenter()
}


javafx {
    version = "12"
    modules = javafxModules
}


ext.protobuf_version = "3.11.1"
ext.grpc_version = "1.28.1" // CURRENT_GRPC_VERSION
ext.grpc_kotlin_version = "0.1.1" // CURRENT_GRPC_KOTLIN_VERSION

protobuf {
    protoc { artifact = "com.google.protobuf:protoc:3.11.1" }
    plugins {
        // Specify protoc to generate using kotlin protobuf plugin
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:$grpc_version"
        }
        // Specify protoc to generate using our grpc kotlin plugin
        grpckt {
            artifact = "io.grpc:protoc-gen-grpc-kotlin:$grpc_kotlin_version"
        }
    }
    generateProtoTasks {
        all().each { task ->
            task.plugins {
                // Generate Java gRPC classes
                grpc { }
                // Generate Kotlin gRPC using the custom plugin from library
                grpckt { }
            }
        }
    }
}

apply plugin: 'com.google.protobuf'

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    compile 'no.tornado:tornadofx:2.0.0-SNAPSHOT'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.61"
    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
    implementation "com.google.protobuf:protobuf-java:3.11.1"
    implementation "com.google.protobuf:protobuf-java-util:3.11.1"
    implementation "io.grpc:grpc-netty-shaded:1.28.1"
    implementation 'io.grpc:grpc-netty:1.4.0'
    implementation 'io.grpc:grpc-protobuf:1.4.0'
    implementation 'io.grpc:grpc-stub:1.4.0'
    implementation "io.grpc:grpc-kotlin-stub:0.1.1"
}
sourceSets {
    main {
        kotlin {
            srcDirs 'build/generated/source/proto/main/grpckt'
            srcDirs 'build/generated/source/proto/main/grpc'
            srcDirs 'build/generated/source/proto/main/java'
        }
    }
}
compileKotlin {
    kotlinOptions.jvmTarget = "11"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}